try to fix non visible gravatar -> picture in bio

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -89,6 +89,6 @@
   
     to {
       margin-left: 0%;
-      width: 100%;
+      width: 50%;
     }
   }
